# hybridAgentsBase

./: .gitignore  AI_GUIDELINES.md  README.md  requirements.txt
core/: __init__.py  async_powerful_node.py  async_powerful_nodes.py  base_node.py  human_node.py  llm.py  smolagents_factory.py  sync_powerful_nodes.py  web_node.py  web_tools.py
core/storage/: base.py  fs.py
examples/basic/: README.md  flow.py  main.py  models.py  nodes.py  prompts.py  tools.py
examples/cli_agent/: README.md  flow.py  main.py  nodes.py
examples/cli_agent/.memories/: user_default_user.json
examples/get_financial_symbols/: .env.example  README.md  flow.py  main.py  mock_mcp_server.py  mock_price_api.py  models.py  nodes.py  prompts.py  test.sh  tools.py
examples/human_input/: README.md  flow.py  main.py  nodes.py
examples/web_agent/: flow.py  login_models.py  main.py  models.py  nodes.py  notes.txt  prompts.py  pyproject.toml  run_server.py  server.py  tools.py
examples/web_agent/templates/: index.html  login.html
